--- a/01-basic-html-css/odin-etch-a-sketch/style.css
+++ b/01-basic-html-css/odin-etch-a-sketch/style.css
@@ -10,11 +10,31 @@ body {
     width: calc(100vw - 40px);
 }
 button {
+    padding: 1em 1em;
+    border-radius: 0.5rem;
+    border: 1px solid #313033;
+    background-color: #313033;
+    color: rgb(238, 238, 238);
     width: fit-content;
+}
+.options {
+    font-family: 'Arial', sans-serif;
 }
 .container {
     display: flex;
     flex-wrap: wrap;
+}
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+}
+.more-modes {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .square {
@@ -22,3 +42,60 @@ button {
     width: 30px;
     border: 1px solid rgb(28, 28, 28, 0.75);
 }
+/* From Uiverse.io by TimTrayler */ 
+.switch {
+    --secondary-container: #3a4b39;
+    --primary: #84da89;
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3.7em;
+    height: 1.8em;
+   }
+   
+   .switch input {
+    display: none;
+    opacity: 0;
+    width: 0;
+    height: 0;
+   }
+   
+   .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #313033;
+    transition: .2s;
+    border-radius: 30px;
+   }
+   
+   .slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
+    border-radius: 20px;
+    left: 0.2em;
+    bottom: 0.2em;
+    background-color: #aeaaae;
+    transition: .4s;
+   }
+   
+   input:checked + .slider::before {
+    background-color: var(--primary);
+   }
+   
+   input:checked + .slider {
+    background-color: var(--secondary-container);
+   }
+   
+   input:focus + .slider {
+    box-shadow: 0 0 1px var(--secondary-container);
+   }
+   
+   input:checked + .slider:before {
+    transform: translateX(1.9em);
+   }
